package edu.ntnu.idatt2003.lectures.interfaces.samemethod.abstraction;

/**
 * The Person interface represents a generic person.
 */
public interface Person {
  /**
   * Gets the full name of the person.
   *
   * @return the full name of the person
   */
  String getFullName();

  /**
   * Gets the gender of the person.
   *
   * @return the gender of the person
   */
  String getGender();
}
