package edu.ntnu.idatt2003.lectures.interfaces.samemethod.abstraction;

/**
 * This abstract class represents a student.
 * It implements the Person interface.
 */
public abstract class Student implements Person{

}
